s3: vfs: Fix compilation error on Solaris.

BUG:https://bugzilla.samba.org/show_bug.cgi?id=12174

Signed-off-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Uri Simchoni <uri@samba.org>
(cherry picked from commit d37545538ca0274feb18f04ba120ed013ac2321a)